Large intro screen gap bugfix

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -24,6 +24,7 @@ body {
 h1 {
   font-size: 2.5rem;
   color: white;
+  margin-bottom: 1rem;
 }
 
 h2 {
@@ -39,6 +40,9 @@ p {
   max-width: 850px;
   word-wrap: break-word;
   margin: auto;
+  margin: 0 auto 1rem auto; /* top 0, horizontal auto (center), bottom 1rem */
+  max-width: 850px;
+  line-height: 1.2;
 }
 
 .pixel-font {
